[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mapsims"
description = "Map based simulations package for Cosmic Microwave Background experiments"
authors = [
    {name = "Andrea Zonca"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: BSD License",
]
dynamic = ["version"]
dependencies = [
    "toml",
    "pyyaml",
    "healpy",
    "numpy",
    "astropy",
    "pysm3 @ git+https://github.com/zonca/pysm.git@debug_catalog#egg=pysm",
]

[project.scripts]
mapsims_run = 'mapsims.runner:command_line_script'

[project.urls]
Home = "https://github.com/galsci/mapsims"
Documentation = "https://mapsims.readthedocs.io"

[project.optional-dependencies]
test = ["pytest", "pytest-astropy", "jupyter_client", "nbformat", "ipykernel", "nbval"]
